build: do some buildSrc stuff and fix deprecation